// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="timeline-card-mediastyles__MediaWrapper-sc-1yk7mm5-0 dWqGmE card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="timeline-card-mediastyles__ImageWrapper-sc-1yk7mm5-1 jcBczc"
      height="200"
    >
      <img
        alt="Image"
        class="timeline-card-mediastyles__CardImage-sc-1yk7mm5-2 hRVRvx"
        data-testid="timeline-card-content-image"
        height="auto"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
        width="100%"
      />
    </div>
  </div>
  <div
    class="timeline-card-mediastyles__MediaDetailsWrapper-sc-1yk7mm5-4 jDyZS"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="timeline-card-mediastyles__CardMediaHeader-sc-1yk7mm5-8 juDSup"
    />
    <span
      class="timeline-card-contentstyles__CardSubTitleSemantic-sc-d7qjm1-5 jhmZiK card-sub-title card-subtitle"
    >
      This is another test
    </span>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="timeline-card-mediastyles__MediaWrapper-sc-1yk7mm5-0 dWqGmE card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="timeline-card-mediastyles__IFrameVideo-sc-1yk7mm5-6 lbQemp"
      data-testid="timeline-card-content-video"
      loading="lazy"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="timeline-card-mediastyles__MediaDetailsWrapper-sc-1yk7mm5-4 jDyZS"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="timeline-card-mediastyles__CardMediaHeader-sc-1yk7mm5-8 juDSup"
    />
    <span
      class="timeline-card-contentstyles__CardSubTitleSemantic-sc-d7qjm1-5 jhmZiK card-sub-title card-subtitle"
    >
      This is another test
    </span>
  </div>
</div>
`;
